test/arrays/bradc/noelemtype.good
noelemtype.chpl:5: syntax error: syntax error near '='
